# vpcc

./: .gitignore  LICENSE.txt  README.md  install_content.bat  install_content.sh
Android/: README.md  build.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/nokia/arplayer/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/nokia/arplayer/: ARPlayerActivity.java  CameraPermissionHelper.java  JniInterface.java  MainMenu.java  SplashActivity.java
Android/app/src/main/res/layout/: activity_main.xml  activity_main_menu.xml  activity_splash.xml  content_main_menu.xml
Android/app/src/main/res/values/: colors.xml  strings.xml
Android/app/src/test/java/com/nokia/arplayer/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Assets/Shaders/: common.glsl  debugText.frag  debugText.vert  debugVideo.vert  debugVideoColor.frag  debugVideoDepth.frag  debugVideoOccupancy.frag  featurePoint.frag  featurePoint.vert  focusSquare.frag  focusSquare.vert  fullscreenQuad.frag  fullscreenQuad.vert  passthroughCamera.frag  passthroughCamera.vert  pcc.frag  pcc.vert  quad.frag  quad.vert  quadVideo.frag  vpcc.frag  vpcc.vert
Content/: LICENSE.txt
Sources/: ARPlayer.cpp  ARPlayer.h  ARPlayerApplication.cpp  ARPlayerApplication.h  Config.h  DebugCharacterSet.h  DebugRenderer.cpp  DebugRenderer.h  DebugTextRenderer.cpp  DebugTextRenderer.h  FeaturePointRenderer.cpp  FeaturePointRenderer.h  FileSystem.h  GLDeclarations.inc  GraphicsAPI.cpp  GraphicsAPI.h  HEVC.cpp  HEVC.h  HEVCBitstream.cpp  HEVCBitstream.h  HWVideoDecoder.cpp  HWVideoDecoder.h  HWVideoDecoderDummy.cpp  HWVideoDecoderDummy.h  Helpers.h  HighResolutionTimer.cpp  HighResolutionTimer.h  IApplication.h  Logger.h  PCCBitstream60.cpp  PCCBitstream60.h  PCCConfig.h  PCCParser60.cpp  PCCParser60.h  PCCRenderer.cpp  PCCRenderer.h  PassthroughCameraRenderer.cpp  PassthroughCameraRenderer.h  QuadRenderer.cpp  QuadRenderer.h  (+5 more)
Sources/Android/: ARPlayerApplicationJNI.cpp  FileSystem.cpp  HWVideoDecoderMediaCodec.cpp  HWVideoDecoderMediaCodec.h  JNIInterface.cpp  JNIInterface.h  Logger.cpp  Surface.cpp  Surface.h  SurfaceTexture.cpp  SurfaceTexture.h
Sources/VPCC/: VPCCBitstream80.cpp  VPCCBitstream80.h  VPCCDatatypes110.h  VPCCDatatypes121.h  VPCCDatatypes130.h  VPCCDecoder110.cpp  VPCCDecoder110.h  VPCCDecoder121.cpp  VPCCDecoder121.h  VPCCDecoder130.cpp  VPCCDecoder130.h  VPCCParser110.cpp  VPCCParser110.h  VPCCParser121.cpp  VPCCParser121.h  VPCCParser130.cpp  VPCCParser130.h  VPCCParser80.cpp  VPCCParser80.h  VPCCPlayer.cpp  VPCCPlayer.h  VPCCRenderer.cpp  VPCCRenderer.h
